<resources>
    <string name="app_name">Freshers Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="item_arr">
        <item>All</item>
        <item>Shirt</item>
        <item>Trouser</item>
        <item>ELECTRONIC</item>
    </string-array>

    <style name="TextViewFont">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:gravity">center_vertical</item>
        <item name="android:textAllCaps">false</item>
    </style>

    <string-array name="color">
        <item>All</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Blue</item>
        <item>Black</item>
    </string-array>

    <string name="organization">Organization</string>
    <string name="personal">Personal</string>
    <string name="shipping_partner">Shipping partner</string>
    <string name="service_type">Service type</string>
    <string name="shipping_cost_paid_to_partner">Shipping cost paid to partner</string>
    <string name="tracking_no">Tracking No.</string>
    <string name="notes">Notes</string>
    <string name="shipping_date">Shipping date</string>
    <string name="weight">Weight(g)</string>
    <string name="size">Size(cm)</string>
    <string name="search_view">Enter name, SKU code, S…</string>
    <string name="receiver">Receiver</string>
    <string name="tel">Tel</string>
    <string name="address">Address</string>
    <string name="touch_to_enter">Touch to enter</string>
    <string name="area">Area</string>
    <string name="touch_to_select">Touch to select</string>
    <string name="ward_commune">Ward, Commune</string>
    <string name="ship_paid_by_cust">Ship paid by cust.</string>
    <string name="deposit_method">Deposit method</string>
    <string name="deposit">Deposit</string>
    <string name="transfer">Transfer</string>
    <string name="sale_channel">Sale channel</string>
    <string name="collect_COD">Collect COD</string>
    <string name="name_product">Name product</string>
    <string name="code_product">Code product</string>
    <string name="price_type_product">Price, Type product</string>
    <string name="not_selected_item">Not yet selected item</string>
    <string name="switch_name_filter">AVAILABLE ITEMS (QTY > 0)</string>
    <string name="item_name_filter">ITEM CATEGORY</string>
    <string name="clear_filter">Clear filter</string>
    <string name="done_filter">Done</string>

    <string-array name="day">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Before yesterday</item>
        <item>This week</item>
        <item>Other</item>
    </string-array>

    <string-array name="status">
        <item>All</item>
        <item>Got payment</item>
        <item>Debit</item>
        <item>Deleted</item>
    </string-array>

    <string name="get_payment">Get payment</string>
    <string name="receivable">Receivable</string>
    <string name="none">None</string>
    <string name="customer_name_phone_number">Customer name, phone number</string>
    <string name="buy_more">Buy morer</string>
    <string name="Sale_split_row">Split row</string>
    <string name="code_payment">Code Payment</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="list_of_bills">List of bills</string>
    <string name="total">Total</string>
    <string name="_0_0">0.0</string>
    <string name="sale">Sale</string>
    <string name="shipping_book">Shipping book</string>
    <string name="nam_dang">Nam Dang</string>
    <string name="namfashionhn">namfashionhn</string>
    <string name="save">Save</string>
    <string name="shipping_information">Shipping information</string>
    <string name="no_information">No information</string>
    <string name="option_1">option 1</string>
    <string name="option_2">option 2</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot passwor?</string>
    <string name="sign_up">Sign up</string>
    <string name="misa_eshop">MISA</string>
    <string name="login_in_with_touch_id">Login in with Touch ID</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="ominichannelplatform">O m i n i c h a n n e l P l a t f o r m</string>
    <string name="for_sale">For sale</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="color">Color</string>
    <string name="no_infor_user">No infor user</string>
    <string name="list_of_bill">List of bill</string>
    <string name="ok">OK</string>
    <string name="kienfashionhanoi">KienFashionHaNoi</string>
    <string name="kho_t_ng">Kho tổng</string>
    <string name="select_working_shop">Select working shop</string>
    <string name="sale_advice_get_payment_and_manage_pay_ins_pay_outs">Sale advice, get payment and manage pay-ins/pay-outs</string>
    <string name="cashier">Cashier</string>
</resources>