<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_50"
    android:layout_marginVertical="@dimen/dp_80"
    android:background="@drawable/custom_searchview"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <TextView
        android:id="@+id/tvSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_working_shop"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_18"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbKhoTong"
            android:layout_width="match_parent"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/kho_t_ng" />

        <RadioButton
            android:id="@+id/rbFashion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kienfashionhanoi" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_250"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:background="@drawable/custom_background"
        android:text="@string/ok"
        android:textColor="@color/white" />
</LinearLayout>